# fullstack-projects

./: .gitignore  README.md  fullstack_projects_wsgi.py  pyproject.toml
django_tutorial/: README.md  data.json  db.sqlite3  pyproject.toml
django_tutorial/django_tutorial/: asgi.py  settings.py  wsgi.py
django_tutorial/polls/: models.py  tests.py  urls.py  views.py
django_tutorial/polls/migrations/: 0001_initial.py  0002_choice_image_url.py  0003_choice_image_size.py  0004_alter_choice_image_size.py  0005_alter_choice_image_size.py
django_tutorial/polls/static/polls/: script.js
django_tutorial/polls/templates/: base.html
django_tutorial/polls/templates/polls/: detail.html  index.html  results.html
django_tutorial/staticfiles/polls/: styles.css
